Updates addressing review comments
